<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".RoomReservation"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="328dp"
        android:text="@string/button_learn"
        android:textColor="@color/weiss"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appbar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="84dp"
        android:text="@string/button_kitchen"
        android:textColor="@color/weiss"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/button_wash"
        android:textColor="@color/weiss"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/appbar"
        layout="@layout/app_bar">

    </include>

    <ImageButton
        android:id="@+id/btn_kitchen"
        style="@style/buttons"
        android:layout_width="141dp"
        android:layout_height="163dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/cook" />

    <ImageButton
        android:id="@+id/btn_learn"
        style="@style/buttons"
        android:layout_width="136dp"
        android:layout_height="163dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/owl" />

    <ImageButton
        android:id="@+id/btn_wash"
        style="@style/buttons"
        android:layout_width="141dp"
        android:layout_height="163dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/coolwash" />

</android.support.constraint.ConstraintLayout>